--- a/Translations/German/text-eventCity-change.xml
+++ b/Translations/German/text-eventCity-change.xml
@@ -11,7 +11,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTCITY_CIVICS_BOOM</zType>
-		<Translation>{CITY} erlebte einen Anstieg in der Verwaltung</Translation>
+		<Translation>{CITY} erlebte einen Anstieg bei der Verwaltung</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTCITY_TRAINING_BOOM</zType>
@@ -23,7 +23,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTCITY_MONEY_BOOM</zType>
-		<Translation>{CITY} erlebte einen Anstieg in der Wirtschafts</Translation>
+		<Translation>{CITY} erlebte einen Anstieg in der Wirtschaft</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_EVENTCITY_ORDERS_BOOM</zType>
