--- a/Translations/German/text-map-change.xml
+++ b/Translations/German/text-map-change.xml
@@ -43,15 +43,15 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_MAP_OPTION_RANDOM_RESOURCES_HELP</zType>
-		<Translation>Use random resource placement</Translation>
+		<Translation>Benutze zufällige Ressourcen Platzierung</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MAP_OPTION_PLAYER_START_ANYWHERE</zType>
-		<Translation>Überall</Translation>
+		<Translation>Irgendwo</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MAP_OPTION_PLAYER_START_ANYWHERE_HELP</zType>
-		<Translation>Start anywhere</Translation>
+		<Translation>Beginne irgendwo</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MAP_OPTION_WATER_SIZE_RANDOM</zType>
@@ -59,7 +59,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_MAP_OPTION_WATER_SIZE_RANDOM_HELP</zType>
-		<Translation>Randomly chooses an option</Translation>
+		<Translation>Wählt zufällig eine Option</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MAP_OPTION_SEASIDE_PLAYER_START_COAST</zType>
@@ -67,7 +67,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_MAP_OPTION_SEASIDE_PLAYER_START_COAST_HELP</zType>
-		<Translation>Start adjacent to salt water</Translation>
+		<Translation>Beginne neben Salzwasser</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MAP_OPTION_SEASIDE_PLAYER_START_INLAND</zType>
@@ -75,7 +75,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_MAP_OPTION_SEASIDE_PLAYER_START_INLAND_HELP</zType>
-		<Translation>Start away from salt water</Translation>
+		<Translation>Beginne weg von Salzwasser</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MAP_OPTION_SEASIDE_TRIBES_RANDOM</zType>
@@ -83,31 +83,31 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_MAP_OPTION_SEASIDE_TRIBES_RANDOM_HELP</zType>
-		<Translation>Varied in number and distribution</Translation>
+		<Translation>Unterscheidet in Nummer und Verteilung</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MAP_OPTION_SEASIDE_TRIBES_FIVE</zType>
-		<Translation>Five Tribes</Translation>
+		<Translation>Fünf Stämme</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MAP_OPTION_SEASIDE_TRIBES_FIVE_HELP</zType>
-		<Translation>Wide variation in size of Tribes</Translation>
+		<Translation>Breite Streuung in Größe von Stämmem</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MAP_OPTION_SEASIDE_TRIBES_FOUR</zType>
-		<Translation>Four Tribes</Translation>
+		<Translation>Vier Stämmes</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MAP_OPTION_SEASIDE_TRIBES_FOUR_HELP</zType>
-		<Translation>Quadrants</Translation>
+		<Translation>Quadranten</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MAP_OPTION_SEASIDE_TRIBES_THREE</zType>
-		<Translation>Three Tribes</Translation>
+		<Translation>Drei Stämme</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MAP_OPTION_SEASIDE_TRIBES_THREE_HELP</zType>
-		<Translation>Tribes of similar sizes. More unaffiliated camps.</Translation>
+		<Translation>Stämme von gleicher Größe. Mehr ungebundene lager.</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MAP_OPTION_SEASIDE_TERRAIN_RANDOM</zType>
@@ -115,7 +115,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_MAP_OPTION_SEASIDE_TERRAIN_RANDOM_HELP</zType>
-		<Translation>Randomly choose one of the other selections</Translation>
+		<Translation>Wählt zufällig eine der Optionen</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MAP_OPTION_SEASIDE_TERRAIN_TUNDRA</zType>
@@ -123,7 +123,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_MAP_OPTION_SEASIDE_TERRAIN_TUNDRA_HELP</zType>
-		<Translation>This game will include some Tundra</Translation>
+		<Translation>Das Spiel wird etwas Tundra beeinhalten</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MAP_OPTION_SEASIDE_TERRAIN_DESERT</zType>
@@ -131,119 +131,119 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_MAP_OPTION_SEASIDE_TERRAIN_DESERT_HELP</zType>
-		<Translation>This game will include a major Desert</Translation>
+		<Translation>Das Spiel wird eine größere Wüste beeinhalten</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MAP_OPTION_SEASIDE_TERRAIN_MOUNTAINS</zType>
-		<Translation>Extra Mountains</Translation>
+		<Translation>Extra Gebirge</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MAP_OPTION_SEASIDE_TERRAIN_MOUNTAINS_HELP</zType>
-		<Translation>This game will include extra Mountains</Translation>
+		<Translation>Das Spiel wird zusätzliche Gebirge beinhalten</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MAP_OPTION_SEASIDE_TERRAIN_WATER</zType>
-		<Translation>Extra Water</Translation>
+		<Translation>Extra Wasser</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MAP_OPTION_SEASIDE_TERRAIN_WATER_HELP</zType>
-		<Translation>This game will include extra Water</Translation>
+		<Translation>Das Spiel wird zusätzliches Wasser beinhalten</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MAP_OPTION_ARID_PLAYER_START_PLATEAU</zType>
-		<Translation>The Plateau</Translation>
+		<Translation>Die Hochebene</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MAP_OPTION_ARID_PLAYER_START_PLATEAU_HELP</zType>
-		<Translation>Start in the south, on the great plateau</Translation>
+		<Translation>Beginne im Süden, auf der Hochebene</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MAP_OPTION_ARID_PLAYER_START_MIDLAND</zType>
-		<Translation>The Midland</Translation>
+		<Translation>Das Mittelland</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MAP_OPTION_ARID_PLAYER_START_MIDLAND_HELP</zType>
-		<Translation>Start in the middle latitudes</Translation>
+		<Translation>Beginne in mittleren Breiten</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MAP_OPTION_ARID_PLAYER_START_TUNDRA</zType>
-		<Translation>Near the Tundra</Translation>
+		<Translation>Nahe der Tundra</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MAP_OPTION_ARID_PLAYER_START_TUNDRA_HELP</zType>
-		<Translation>Start in the north, where it is colder</Translation>
+		<Translation>Beginne im Norden, wo es kühler ist</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MAP_OPTION_ARID_TRIBES_FIVE</zType>
-		<Translation>Five Tribes</Translation>
+		<Translation>Fünf Stämme</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MAP_OPTION_ARID_TRIBES_FIVE_HELP</zType>
-		<Translation>Scattered</Translation>
+		<Translation>Verstreut</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MAP_OPTION_ARID_TRIBES_FOUR</zType>
-		<Translation>Four Tribes</Translation>
+		<Translation>Vier Stämme</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MAP_OPTION_ARID_TRIBES_FOUR_HELP</zType>
-		<Translation>Quadrants</Translation>
+		<Translation>Quadranten</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MAP_OPTION_ARID_TRIBES_THREE</zType>
-		<Translation>Three Tribes</Translation>
+		<Translation>Drei Stämme</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MAP_OPTION_ARID_TRIBES_THREE_HELP</zType>
-		<Translation>One Tribe per latitude band</Translation>
+		<Translation>Ein Stamm pro Breitengrad</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MAP_OPTION_ARID_TRIBES_TWO</zType>
-		<Translation>Two Tribes</Translation>
+		<Translation>Zwei Stämme</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MAP_OPTION_ARID_TRIBES_TWO_HELP</zType>
-		<Translation>One Tribe prefers flat areas and water. The other prefers to live on hills</Translation>
+		<Translation>Ein Stamm bevorzugt flaches Land und Wasser. Der andere bevorzugt auf den Hügeln zu leben</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MAP_OPTION_ARID_TRIBES_BARBARIANS</zType>
-		<Translation>Barbarians Only</Translation>
+		<Translation>Nur Barbaren</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MAP_OPTION_ARID_TRIBES_BARBARIANS_HELP</zType>
-		<Translation>No Tribes, only Barbarian camps</Translation>
+		<Translation>Keine Stämme, nur Barbaren Lager</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MAP_OPTION_ARID_TRIBES_ONE</zType>
-		<Translation>One Tribe</Translation>
+		<Translation>Ein Stamm</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MAP_OPTION_ARID_TRIBES_ONE_HELP</zType>
-		<Translation>One colossal Tribe owns the middle of the map</Translation>
+		<Translation>Ein riesiger Stamm besitzt den mittleren Teil der Karte</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MAP_OPTION_ARID_TRIBES_RANDOM</zType>
-		<Translation>Random</Translation>
+		<Translation>Zufällig</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MAP_OPTION_ARID_TRIBES_RANDOM_HELP</zType>
-		<Translation>Varied in number and distribution</Translation>
+		<Translation>Variiert in der Anzahl und Verteilung</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MAP_OPTION_ARID_WATER_SIZE_LARGE</zType>
-		<Translation>Large Seas</Translation>
+		<Translation>Große Meere</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MAP_OPTION_ARID_WATER_SIZE_LARGE_HELP</zType>
-		<Translation>Fewer, larger seas of irregular shape</Translation>
+		<Translation>Weniger, größere Meere in unregelmäßigen Formen</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MAP_OPTION_ARID_WATER_SIZE_SMALL</zType>
-		<Translation>Small Jagged Seas</Translation>
+		<Translation>Kleine zackige Meere</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MAP_OPTION_ARID_WATER_SIZE_SMALL_HELP</zType>
-		<Translation>Several small seas will be narrow and jagged. They may interconnect.</Translation>
+		<Translation>Mehrere kleine Meere werden eng und zacking sein. Sie können verbunden sein.</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MAP_OPTION_ARID_WATER_LOCATION_RANDOM</zType>
@@ -251,11 +251,11 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_MAP_OPTION_ARID_WATER_LOCATION_RANDOM_HELP</zType>
-		<Translation>Randomly chooses an option</Translation>
+		<Translation>Wähle eine zufällige Option</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MAP_OPTION_ARID_WATER_LOCATION_FAR_NORTH</zType>
-		<Translation>Far North</Translation>
+		<Translation>Weit im Norden</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MAP_OPTION_ARID_WATER_LOCATION_FAR_NORTH_HELP</zType>
