--- a/Translations/German/text-miscOptions-change.xml
+++ b/Translations/German/text-miscOptions-change.xml
@@ -259,7 +259,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_MISCOPTION_NEWSLETTER</zType>
-		<Translation>Subscribe</Translation>
+		<Translation>Abonnieren</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_MISCOPTION_FIRSTNAME_NAME</zType>
