--- a/Translations/German/text-relationship-change.xml
+++ b/Translations/German/text-relationship-change.xml
@@ -15,7 +15,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELATIONSHIP_CONSPIRING_WITH</zType>
-		<Translation>Verschwärebn mit</Translation>
+		<Translation>Verschwören mit</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELATIONSHIP_CONSPIRING_WITH_VERB</zType>
