--- a/Translations/German/text-subject-change.xml
+++ b/Translations/German/text-subject-change.xml
@@ -327,7 +327,7 @@
 	</Entry>
 	<Entry>
 		<zType>TEXT_SUBJECT_NO_JOB</zType>
-		<Translation>Keine Arbeit</Translation>
+		<Translation>Keine Aufgabe</Translation>
 	</Entry>
 	<Entry>
 		<zType>TEXT_SUBJECT_AMBASSADOR</zType>
